...
    <string name="northern_avenue_title">Northern Avenue</string>
    <string name="northern_avenue_description">Constructed in late 2000\'s, this broadwalk connects Republic Square and Opera Square and unifies the city center. Packed with brand shops, business centers and fancy restaurants, it quickly became the most visited place in Yerevan.</string>
    <string name="northern_avenue_address">Northern Avenue</string>
    <string name="metro_title">Metro</string>
    <string name="metro_description">It\'s only 10 stations long, but every station is a small architectural marvel with bold mix of avant-garde and classical designs. A convenient way to travel between most important parts of the city.</string>
    <string name="metro_address">Republic Square &amp; other places</string>
    <string name="restaurants_category">Restaurants</string>
    <string name="bars_category">Bars</string>
    <string name="parks_category">Parks</string>
    <string name="shops_category">Shops</string>
    <string name="attractions_category">Other Attractions</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="categories">Categories</string>
    <string name="yerevan_title">Yerevan</string>
    <string name="yerevan_description">Yerevan, Armenia\'s capital, is marked by grand Soviet-era architecture. The Matenadaran library, housing thousands of ancient Greek and Armenian manuscripts, dominates its main avenue. Republic Square is the city\'s core, with musical water fountains and colonnaded government buildings. The 1920s History Museum of Armenia on the square\'s eastern side contai
</resources>
